# modern_greek_accentuation

./: .gitignore  .travis.yml  LICENSE  README.md  README.rst  docs.rst  extra_tests.rst  requirements_dev.txt  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: tests.yml
docs/: conf.py  index.rst  modules.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modern_greek_accentuation.doctree  modules.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modern_greek_accentuation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: modern_greek_accentuation.rst.txt
modern_greek_accentuation/: accentuation.py  augmentify.py  resources.py  syllabify.py  transcription.py
modern_greek_accentuation/phonetic symbols/: phoneticSymbols.txt
modern_greek_accentuation/resources/: initialConsonantClusters.txt  phoneticSymbols.xlsx  syllabificationDiscrepancies(GreekLex-IPLR).txt
src/: accentuation.py
src/modern_greek_accentuation/: __init__.py  _helpers.py  accentuation.py  augmentify.py  resources.py  syllabify.py  transcription.py
test/unit/: test_accentuation.py  test_augmentation.py  test_syllabification.py  test_transcription.py
tests/unit/: test_accentuation.py  test_transcription.py
