
[metadata]

name = modern-greek-accentuation
version = 0.592
description = Python 3 library for accenting, analyzing accentuation, syllabification, augmentation and transcription of Modern Greek words",
long_description_content_type = text/markdown
long_description = file: README.md
license  = MIT
url = https://github.com/PicusZeus/modern-greek-accentuation
author = Krzysztof H
author_email = krzysztof.hilman@gmail.com
platform = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = modern_greek_accentuation
package_dir=
    =src

zip_safe = no
python_requires = >= 3.1
setup_requires =
    setuptools
test_suite = test


[options.packages.find]
where=src

